--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
   <section id="banner-section">
     <h2>Banner Section</h2>
-    <p>Place your banner content here</p>
+    <p>conan-exiles-image-1280x720.jpg</p>
   </section>
   
   <section>
