--- a/index.html
+++ b/index.html
@@ -1,33 +1,28 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>My Website</title>
-  <link rel="stylesheet" href="css/styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Word Guessing Game</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            text-align: center;
+            padding-top: 50px;
+        }
+        #wordDisplay {
+            font-size: 24px;
+            margin-bottom: 20px;
+        }
+    </style>
 </head>
 <body>
-  <header>
-    <h1>Welcome to My Website</h1>
-  </header>
-  
-  <nav>
-    <ul>
-      <li><a href="members.html">Members</a></li>
-      <li><a href="videos.html">Videos</a></li>
-      <li><a href="maps.html">Maps</a></li>
-      <li><a href="guides.html">Guides</a></li>
-    </ul>
-  </nav>
+    <h1>Word Guessing Game</h1>
+    <div id="wordDisplay">Word: <span id="currentWord"></span></div>
+    <label for="guessInput">Guess a letter:</label>
+    <input type="text" id="guessInput">
+    <button onclick="checkGuess()">Guess</button>
 
-  <section id="banner-section">
-    <h2>Banner Section</h2>
-    <p><img src="conan-exiles-image-1280x720.jpg" alt="Image Description"></p>
-  </section>
-  
-  <section>
-    <h2>Images Section</h2>
-    <img src="images/image1.jpg" alt="Image 1">
-    <img src="images/image2.jpg" alt="Image 2">
-    <!-- Add more images here -->
-  </section>
+    <script src="game.js"></script>
 </body>
 </html>
